[package]
name = "map-bench"
version = "0.1.0"
authors = ["quake wang <quake.wang@gmail.com>"]
edition = "2018"

[dependencies]
criterion = "0.2"
rayon = "1.1"
lazy_static = "1.3"
parking_lot = "0.9"
rand = "0.6"
# kudzu = {git = "https://github.com/withoutboats/kudzu"}
chashmap = "2.2"
contrie = "0.1"
ccl = "4.12"
crossbeam-skiplist = {git = "https://github.com/crossbeam-rs/crossbeam", package = "crossbeam-skiplist"}

[[bench]]
name = "map"
harness = false
